--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,11 +1,12 @@
 .hero-section {
     padding-top: 395px;
-    padding-bottom: 21px;
+    padding-bottom: 20px;
     background-image: linear-gradient(180deg, rgba(17, 17, 17, 0) 0%, rgba(17, 17, 17, 0.4) 100%), url(/img/hero/chocolate-mobile@1x.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    margin-bottom: 71px;
+    margin-bottom: 72px;
+    margin-top: 62px;
     border-radius: 30px;
 }
 
@@ -22,6 +23,8 @@
         background-image: linear-gradient(180deg, rgba(17, 17, 17, 0) 0%, rgba(17, 17, 17, 0.4) 100%), url(/img/hero/chocolate-tablet@1x.jpg);
         padding-top: 671px;
         padding-bottom: 40px;
+        margin-bottom: 50px;
+        margin-top: 80px;
     }
     @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
@@ -32,7 +35,7 @@
     }
 }
 
-@media only screen and (min-width:769px) {
+@media only screen and (min-width:1200px) {
     .hero-section {
         background-image: linear-gradient(180deg, rgba(17, 17, 17, 0) 0%, rgba(17, 17, 17, 0.4) 100%), url(/img/hero/chocolate@1x.jpg);
         padding-top: 381px;
@@ -101,7 +104,8 @@
     font-weight: 600;
     font-size: 14px;
     line-height: 1.21;
-    padding: 8px 14px;
+    padding: 7px 14px;
+    height: 41px;
     color: var(--main-light-text-color);
     border: 1px solid var(--main-light-text-color);
     border-radius: 100px;
@@ -109,7 +113,7 @@
 
 @media only screen and (min-width: 375px) {
     .hero-made-btn {
-        padding: 12px 28px;
+        padding: 11px 28px;
     }
 }
 
@@ -129,7 +133,9 @@
     background-color: var(--additional-bg-color);
     fill: var(--accent-text-color);
     border-radius: 50%;
-    padding: 5px;
+    padding: 10px;
+    width: 28px;
+    height: 28px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -144,6 +150,9 @@
 
 @media only screen and (min-width: 768px) {
     .scroll-icon-large {
+        width: 38px;
+        height: 38px;
+        padding: 13px;
         display: block;
         border-radius: 50%;
         background-color: var(--additional-bg-color);
@@ -171,6 +180,7 @@
         width: 107px;
         margin-top: 39px;
         display: flex;
+        align-items: center;
         gap: 12px;
     }
 }
@@ -178,15 +188,9 @@
 @media only screen and (min-width: 768px) {
     .scroll-down-link {
         display: flex;
+        align-items: center;
         width: 130px;
         gap: 14px;
-    }
-}
-
-@media only screen and (min-width: 768px) {
-    .test {
-        display: flex;
-        align-items: center;
     }
 }
 
@@ -194,5 +198,12 @@
     .scroll-down {
         display: block;
         margin-left: auto;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .hero-buttons {
+        display: flex;
+        align-items: center;
     }
 }
