--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -2,7 +2,8 @@
     <div class="container">
         <h1 class="visually-hidden">Delicious Chocolate</h1>
         <h2 class="hero-title">Treat yourself or a loved one to our finest ingredients for a moment of pure delight!</h2>
-        <div class="test">
+
+        <div class="hero-buttons">
             <div>
                 <button type="button" class="modal-btn hero-modal-btn" data-modal-open-review>Buy now</button>
                 <a href="#made" class="link hero-made-btn">How it’s made</a>
@@ -10,14 +11,15 @@
             <div class="scroll-down">
                 <a href="footer-choc" class="link scroll-down-link" data-modal-open-review>
                     <p class="scroll-down-text">scroll down</p>
-                    <svg class="scroll-icon-small" width="16" height="16">
-                    <use href="../img/choco-icons.svg#icon-vector-small"></use>
-                </svg>
-                    <svg class="scroll-icon-large" width="22" height="22">
-                  <use href="../img/choco-icons.svg#icon-vector"></use>
-                </svg>
+                    <svg class="scroll-icon-small" width="5" height="9">
+                        <use href="../img/choco-icons.svg#icon-vector-small"></use>
+                    </svg>
+                    <svg class="scroll-icon-large" width="7" height="13">
+                      <use href="../img/choco-icons.svg#icon-vector"></use>
+                    </svg>
                 </a>
             </div>
         </div>
+
     </div>
 </section>
