--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -2,7 +2,7 @@
   <div class="container">
     <h2 class="products-title section-title">Our <span>Products</span></h2>
     <div class="swiper my-swiper">
-      <ul class="swiper-wrapper">
+      <ul class="swiper-wrapper products-wrapper">
         <li class="products-swiper swiper-slide">
           <img
             class="products-img"
@@ -140,6 +140,6 @@
         </li>
       </ul>
     </div>
-    <div class="swiper-pagination"></div>
+    <div class="swiper-pagination products-pagination"></div>
   </div>
 </section>
