--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,4 +1,4 @@
-<section class="reviews">
+<section class="reviews" id="reviews">
 	<div class="container">
 		<h2 class="reviews-section-title section-title"><span class="reviews-span">chocolate</span> is loved</h2>
 
