--- a/src/css/subscribe.css
+++ b/src/css/subscribe.css
@@ -112,7 +112,7 @@
 .subscribe-btn:hover,
 .subscribe-btn:focus {
     color: var(--reserve-bg-color);
-    background-color: #FCF1E0;
+    background-color: var(--secondary-accent-color);
 }
 
 @media only screen and (min-width: 768px) {
