--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -10,6 +10,6 @@
             of art
             that is sure to please.
         </p>
-        <button type="button" class="subscribe-btn section-btn">Subscribe</button>
+        <button type="button" class="subscribe-btn section-btn" data-modal-open-explore>Subscribe</button>
     </div>
 </section>
