додав класс menu для плавного скролу

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,9 +7,9 @@
           <use href="../img/choco-icons.svg#icon-chocolate"></use>
         </svg>
       </a>
-      <ul class="header-list list">
+      <ul class="header-list menu list">
         <li class="header-nav-li">
-          <a class="header-nav-link menu-link link" href="./index.html">Home</a>
+          <a class="header-nav-link menu-link link" href="#header">Home</a>
         </li>
         <li class="header-nav-li">
           <a class="header-nav-link menu-link link" href="#made"
