--- a/src/partials/burger-menu.html
+++ b/src/partials/burger-menu.html
@@ -5,7 +5,7 @@
     </svg>
   </button>
 
-  <ul class="modal-mobile-list list">
+  <ul class="modal-mobile-list menu list">
     <li>
       <a
         class="mobile-menu-link mobile-menu-text mobile-menu-line link"
@@ -21,7 +21,9 @@
       >
     </li>
     <li>
-      <a class="mobile-menu-link mobile-menu-text mobile-menu-line link" href=""
+      <a
+        class="mobile-menu-link mobile-menu-text mobile-menu-line link"
+        href="#products"
         >Our products</a
       >
     </li>
