--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer-section">
+<div class="footer-section">
     <div class="footer-con container" id="footer-choc">
         <div class="footer-up-part">
             <div class="footer-call">Chocolate <span class="footer-call-rest">a delicious cure for a bad day</span>
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="footer-down-part list">
-            <ul class="footer-menu-list">
+            <ul class="footer-menu-list menu">
                 <li class="list"><a href="#header" class="footer-link-menu link">Home</a></li>
                 <li class="list"><a href="#made" class="footer-link-menu link">How it's made?</a></li>
                 <li class="list"><a href="#products" class="footer-link-menu link">Our products</a></li>
@@ -34,4 +34,5 @@
             </ul>
         </div>
     </div>
-</footer>
+</div>
+<!-- <script type="module" src="../js/gotop.js"></script> -->
