--- a/src/css/made.css
+++ b/src/css/made.css
@@ -5,6 +5,18 @@
   }
 }
 
+@media screen and (min-width: 768px) {
+  .section-made {
+    padding-bottom: 100px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .section-made {
+    padding-bottom: 128px;
+  }
+}
+
 .made-title {
   margin-bottom: 32px;
 }
