--- a/src/partials/made.html
+++ b/src/partials/made.html
@@ -1,4 +1,4 @@
-<section id="made" class="section">
+<section id="made" class="section section-made">
   <div class="container made-container">
     <h2 class="section-title made-title">
       How it’s <span class="title-accent">made?</span>
