Висоту точок виправив

--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -1,136 +1,141 @@
-.reviews-span{
-	color: var(--primary-accent-color);
+.reviews-span {
+  color: var(--primary-accent-color);
 }
 
-.reviews-cards{
-	margin-bottom: 32px;
-	position: relative;
-	padding-top: 74px;
-	overflow: hidden;
+.reviews-cards {
+  margin-bottom: 32px;
+  position: relative;
+  padding-top: 74px;
+  overflow: hidden;
 }
 
-.wrapper-swiper{
-	margin-bottom: 20px;
+.wrapper-swiper {
+  margin-bottom: 20px;
 }
 
-.reviews-card{
-	background-color: var(--additional-bg-color);
-	border: 1px solid rgba(17, 17, 17, 0.1);
-	box-shadow: 0px 9.04932px 26.5717px rgba(215, 228, 249, 0.25);
-	border-radius: 15px;
-	display: flex;
-	align-items: center;
-	flex-direction: column;
-	padding:65px 18px 0 18px;
-	min-height:  200px;
-	box-sizing: border-box;
+.reviews-card {
+  background-color: var(--additional-bg-color);
+  border: 1px solid rgba(17, 17, 17, 0.1);
+  box-shadow: 0px 9.04932px 26.5717px rgba(215, 228, 249, 0.25);
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 65px 18px 0 18px;
+  min-height: 200px;
+  box-sizing: border-box;
 }
-.reviews-card-img{
-	position: absolute;
-	top: -32px; 
-	left: 50%;
-	transform: translateX(-50%);
-	user-select: none;
+.reviews-card-img {
+  position: absolute;
+  top: -32px;
+  left: 50%;
+  transform: translateX(-50%);
+  user-select: none;
 }
 
 .reviews-card-title {
-	user-select: none;
+  user-select: none;
 }
 
 .reviews-card-title:not(:last-child) {
-	margin-bottom: 14px;
+  margin-bottom: 14px;
 }
 .reviews-card-text {
-	text-align: center;
-	user-select: none;
+  text-align: center;
+  user-select: none;
 }
-.reviews-button.section-btn{
-	display: block;
-	border: 1px solid var(--primary-accent-color);
-	border-radius: 100px;
-	color: var(--main-dark-text-color);
-	background-color: var(--primary-bg-color) ;
-	padding: 12px 28px;
-	margin: 0 auto;
-	cursor: pointer;
+.reviews-button.section-btn {
+  display: block;
+  border: 1px solid var(--primary-accent-color);
+  border-radius: 100px;
+  color: var(--main-dark-text-color);
+  background-color: var(--primary-bg-color);
+  padding: 12px 28px;
+  margin: 0 auto;
+  cursor: pointer;
 }
 .reviews-button:hover,
-.reviews-button:focus{
-	color: var(--main-light-text-color);
-	background-color: var(--reserve-bg-color);
+.reviews-button:focus {
+  color: var(--main-light-text-color);
+  background-color: var(--reserve-bg-color);
 }
 /* Буллєти */
-.reviews-cards .swiper-pagination-bullet{
-	width: 13px;
-	height: 13px;
-	background: rgba(17, 17, 17, 0.1);
+.reviews-cards .swiper-pagination-bullet {
+  width: 13px;
+  height: 13px;
+  background: rgba(17, 17, 17, 0.1);
 }
 .reviews-cards .swiper-pagination-bullet-active {
-	width: 28px;
-	height: 13px;
-	background-color: #FD9222;
-	border-radius: 100px;
+  width: 28px;
+  height: 13px;
+  background-color: #fd9222;
+  border-radius: 100px;
 }
 /* Пагінація */
-.reviews-cards .swiper-pagination{
-/* margin-bottom: -20px; */
-bottom: 0; left: 0;
-padding-top: 20px; 
-height:13px;
+.reviews-cards .swiper-pagination {
+  /* margin-bottom: -20px; */
+  bottom: 0;
+  left: 0;
+  padding-top: 20px;
+  height: 13px;
 }
-.reviews-card:last-child{
-	margin-bottom: 20px; 
+.reviews-card:last-child {
+  margin-bottom: 20px;
 }
 /* margin поміж буллєтами */
-.swiper-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet, .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet:not(:last-child) {
-	margin:0 13px 0 0;
-}  
+.reviews-card
+  .swiper-horizontal
+  > .swiper-pagination-bullets
+  .swiper-pagination-bullet,
+.swiper-pagination-horizontal.swiper-pagination-bullets
+  .swiper-pagination-bullet:not(:last-child) {
+  margin: 0 13px 0 0;
+}
 
-	.reviews-cards .swiper-pagination {
-   padding-top: 0px;
-} 
+.reviews-cards .swiper-pagination {
+  padding-top: 0px;
+}
 
-	/* tablet */
+/* tablet */
 @media only screen and (min-width: 768px) {
-	.reviews-cards{
-		padding-top: 91px;
-	}
-	.reviews-section-title.section-title{
-		font-size: 24px;
-   	line-height: 1.16;
-	}
-	.reviews-card-img{
-		top: -42px; 
-	}
-	.reviews-card{
-		padding:56px 16px 0 16px;
-	}
-	.reviews-card-title:not(:last-child) {
-		margin-bottom: 24px;
-	}
-	.reviews-card:last-child{
-		margin-bottom: 32px; 
-	}
-	.reviews-cards{
-		margin-bottom: 50px;
-	}
-	.reviews-button.section-btn{
-		padding: 13px 40px;
-		font-size: 18px;
-		line-height: 1.22;
-	}
+  .reviews-cards {
+    padding-top: 91px;
+  }
+  .reviews-section-title.section-title {
+    font-size: 24px;
+    line-height: 1.16;
+  }
+  .reviews-card-img {
+    top: -42px;
+  }
+  .reviews-card {
+    padding: 56px 16px 0 16px;
+  }
+  .reviews-card-title:not(:last-child) {
+    margin-bottom: 24px;
+  }
+  .reviews-card:last-child {
+    margin-bottom: 32px;
+  }
+  .reviews-cards {
+    margin-bottom: 50px;
+  }
+  .reviews-button.section-btn {
+    padding: 13px 40px;
+    font-size: 18px;
+    line-height: 1.22;
+  }
 }
 
 /* desktop */
 @media only screen and (min-width: 1200px) {
-	.reviews-cards{
-		padding-top: 91px;
-	}
-	.reviews-card-img{
-		top: -40px; 
-	}
-	.reviews-card{
-		padding:56px 24px 0 24px;
-	}
+  .reviews-cards {
+    padding-top: 91px;
+  }
+  .reviews-card-img {
+    top: -40px;
+  }
+  .reviews-card {
+    padding: 56px 24px 0 24px;
+  }
 }
-	
