--- a/src/css/sellers.css
+++ b/src/css/sellers.css
@@ -71,8 +71,6 @@
     box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
 }
 
-.top-icon:hover {}
-
 .top-paragraph {
     margin-top: 20px;
     margin-bottom: 32px;
@@ -87,6 +85,29 @@
     .top-paragraph {
         margin-top: 32px;
         margin-bottom: 0;
+    }
+}
+
+@media only screen and (min-width: 1199px) {
+    .top-paragraph {
+        display: none;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    .top-paragraph-desk {
+        margin-top: 32px;
+        max-width: 407px;
+        font-size: 14px;
+        line-height: 1.28;
+        letter-spacing: -0.02em;
+        color: var(--main-dark-text-color);
+    }
+}
+
+@media only screen and (max-width: 1199px) {
+    .top-paragraph-desk {
+        display: none;
     }
 }
 
@@ -111,7 +132,7 @@
         min-width: 162px;
         height: 50px;
         right: 4.1%;
-        top: 87%;
+        top: 86.5%;
         padding: 14px 40px;
         font-size: 18px;
         line-height: 1.22px;
@@ -122,6 +143,7 @@
 @media only screen and (min-width: 1200px) {
     .top-button {
         right: 2.7%;
+        top: 88.4%;
     }
 }
 
