--- a/src/partials/sellers.html
+++ b/src/partials/sellers.html
@@ -42,6 +42,9 @@
                     src="../img/top_sellers/choco_three@1x.jpg" alt="Chocolate tower">
             </li>
         </ul>
-        <button type="submit" class="top-button section-btn js-open-modal">Buy now</button>
+             <p class="top-paragraph-desk">Crazy enough chocolate originates from a bean just like the coffee bean called
+                        Cacao. Cacao has been around for
+                        thousands of years and was first discovered by the Native American tribe called the Mayans.</p>
+                     <button type="submit" class="top-button section-btn js-open-modal">Buy now</button>
     </div>
 </section>
