--- a/src/partials/buy-now.html
+++ b/src/partials/buy-now.html
@@ -1,5 +1,6 @@
-<div class="buy-now-modal modal active">
-    <button type="button" class="buy-now-btn-close">
+<div class="buy-now-modal js-overlay-modal active">
+    <button type="button" class="buy-now-btn-close
+    js-modal-close">
         <svg class="buy-now-icon-close">
             <use href="../img/choco-icons.svg#icon-x-close"></use>
         </svg>
