--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,7 +1,6 @@
 <section class="reviews" id="reviews">
 	<div class="container">
 		<h2 class="reviews-section-title section-title"><span class="reviews-span">chocolate</span> is loved</h2>
-
 		<!-- Слайдер -->
 		<div class="swiper reviews-cards">
 			<div class="swiper-wrapper wrapper-swiper">
@@ -12,7 +11,6 @@
 						<p class="reviews-card-text section-text">I love this chocolate bar. Perfect combination of light crispy wafer, covered in a thin layer chocolate.</p>
 					</div>
 				</div>
-	
 				<div class="swiper-slide">
 					<div class="reviews-card">
 						<img class="reviews-card-img"  srcset="../img/reviews/boy_one@1x.png 1x, ../img/reviews/boy_one@2x.png 2x" src="../img/reviews/boy_one@2x.png" alt="Images Nazar Babenko" width="80" height="80">
@@ -20,7 +18,6 @@
 						<p class="reviews-card-text section-text">This chocolate confection is a delight! A delight! The wafer is light and crisp, the hazelnut cream is smooth, and the chocolate is good.</p>
 					</div>
 				</div>
-	
 				<div class="swiper-slide">
 					<div class="reviews-card">
 						<img class="reviews-card-img" srcset="../img/reviews/girl_two@1x.png 1x, ../img/reviews/girl_two@2x.png 2x" src="../img/reviews/girl_two@2x.png" alt="Images Olena Kampusch" width="80" height="80">
@@ -28,7 +25,6 @@
 						<p class="reviews-card-text section-text"> Chocolate is a family favourite treat. Love the delicious smooth chocolate and the creaminess inside. The wafer is soft but crunchy.</p>
 					</div>
 				</div>
-			
 				<div class="swiper-slide">
 					<div class="reviews-card">
 						<img class="reviews-card-img" srcset="../img/reviews/girl_three@1x.png 1x, ../img/reviews/girl_three@2x.png 2x" src="../img/reviews/girl_three@2x.png" alt="Images Natalia Sus" width="80" height="80">
@@ -36,7 +32,6 @@
 						<p class="reviews-card-text section-text"> The chocolate assortment was delicious. Both dark and milk chocolate pieces were smooth and just right on the sweetness level. </p>
 					</div>
 				</div>
-		
 				<div class="swiper-slide">
 					<div class="reviews-card">
 						<img class="reviews-card-img" srcset="../img/reviews/boy_two@1x.png 1x, ../img/reviews/boy_two@2x.png 2x" src="../img/reviews/boy_two@1x.png" alt="Images Danilo Nottingham" width="80" height="80">
@@ -44,7 +39,6 @@
 						<p class="reviews-card-text section-text"> This is delicious. It so rich and flavorful you don’t need to use as many. I love topping an apple with almond butter and these chips for a snack.</p>
 					</div>
 				</div>
-	
 				<div class="swiper-slide">
 					<div class="reviews-card">
 						<img class="reviews-card-img" srcset="../img/reviews/girl_four@1x.png 1x, ../img/reviews/girl_four@2x.png 2x" src="../img/reviews/girl_four@2x.png" alt="Images Irina Tydnyuk" width="80" height="80">
@@ -53,11 +47,9 @@
 					</div>
 				</div>
 			</div>
-			<div class="swiper-pagination"></div>
-	
-		</div>
-		<button data-modal-open-review class="reviews-button section-btn" aria-expanded="false" aria-controls="" type="button"> Leave  a review</button>
+			<div class="reviews-pagination swiper-pagination"></div>
+		</div> 
+		<button class="reviews-button section-btn" type="button" data-modal-open-review > Leave  a review</button>
 	</div>
 </section>
-
 
