--- a/src/css/products.css
+++ b/src/css/products.css
@@ -76,6 +76,7 @@
   border: 1px solid rgba(17, 17, 17, 0.1);
   border-radius: 100px;
   color: var(--main-dark-text-color);
+  transition: var(--transition-dur-and-func);
   cursor: pointer;
 }
 .products-btn:hover,
