--- a/src/partials/leave-review.html
+++ b/src/partials/leave-review.html
@@ -5,8 +5,9 @@
         </svg>
     </button>
 
-    <h2 class="section-title reveiew-modal-title">leave a review about <span class="review-title-part">our
-            chocolate</span></h2>
+    <h2 class="section-title reveiew-modal-title">
+        leave a review <span class="modal-text-part">about <span class="review-title-part">our chocolate</span></span>
+    </h2>
     <form class="leave-review-form">
         <input class="input-field" name="user_name" type="text" placeholder="Name" required pattern="^[a-zA-Zа-яА-Яі-Ії-Ї]+$" minlength="2">
         <input class="input-field" name="user_e-mail" type="email" placeholder="Email" required pattern="^[a-zA-Zа-яА-Яі-Ії-Ї]+$" minlength="2">
