--- a/src/css/leave-review.css
+++ b/src/css/leave-review.css
@@ -4,8 +4,14 @@
     pointer-events: none;
 }
 
+@media only screen and (min-width:320px) and (max-width: 767px) {
+    .modal-title-width {
+        max-width: 12em;
+    }
+}
 
-/* .backdrop {
+
+/* .modal-backdrop {
     width: 100%;
     height: 100%;
     position: fixed;
@@ -22,9 +28,12 @@
 }
 
 .review-modal {
-    position: absolute;
+    z-index: 100;
+    position: fixed;
     left: 50%;
     top: 50%;
+    width: 311px;
+    height: 471px;
     padding: 32px 24px;
     background-color: var(--additional-bg-color);
     border-radius: 15px;
@@ -36,6 +45,7 @@
 @media only screen and (min-width: 768px) {
     .review-modal {
         width: 517px;
+        height: 628px;
         padding: 40px;
     }
 }
@@ -137,11 +147,16 @@
     display: flex;
     position: absolute;
     align-items: center;
+    border: none;
     box-shadow: 1.5px 0px 0px 0px rgba(0, 0, 0, 0.1);
-    top: 25%;
+    top: 30%;
     gap: 8px;
     padding-left: 18px;
     padding-right: 8px;
+    border-top: none;
+    border-bottom: none;
+    outline: none;
+    background-color: #fff;
 }
 
 .flag-img {
@@ -206,4 +221,25 @@
     padding: 12px 28px;
     border-radius: 100px;
     width: 93px;
+    height: 41px;
+}
+
+@media only screen and (min-width: 768px) {
+    .leave-review-modal-btn {
+        width: 117px;
+        height: 45px;
+    }
+}
+
+.leave-review-modal-btn:hover,
+.leave-review-modal-btn:focus {
+    color: var(--reserve-bg-color);
+    background-color: var(--secondary-accent-color);
+}
+
+@media only screen and (max-width: 767px) {
+    .modal-text-part {
+        white-space: nowrap;
+        display: inline;
+    }
 }
