--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,15 +1,15 @@
 <section class="section hero-section">
     <div class="container">
         <h1 class="visually-hidden">Delicious Chocolate</h1>
-        <h2 class="hero-title">Treat yourself or a loved one to our finest ingredients for a moment of pure delight!</h2>
+        <h2 class="hero-title">Treat yourself or a loved one to <span class="hero-title-part">our finest ingredients for a moment</span> of pure delight!</h2>
 
         <div class="hero-buttons">
             <div>
-                <button type="button" class="modal-btn hero-modal-btn" data-modal-open-review>Buy now</button>
+                <button type="button" class="modal-btn hero-modal-btn" js-open-modal>Buy now</button>
                 <a href="#made" class="link hero-made-btn">How it’s made</a>
             </div>
             <div class="scroll-down">
-                <a href="footer-choc" class="link scroll-down-link" data-modal-open-review>
+                <a href="#footer-choc" class="link scroll-down-link">
                     <p class="scroll-down-text">scroll down</p>
                     <svg class="scroll-icon-small" width="5" height="9">
                         <use href="../img/choco-icons.svg#icon-vector-small"></use>
