--- a/src/partials/sellers.html
+++ b/src/partials/sellers.html
@@ -1,4 +1,4 @@
-<section class="section top-section">
+<section class="section top-section" id="sellers-section">
     <div class="top-container container">
         <h2 class="top-sellers-title">top <span class="sellers-span">sellers</span></h2>
         <ul class="top-list list">
@@ -6,13 +6,13 @@
                 <picture>
                     <!-- Desktop -->
                     <source media="(min-width: 1200px)"
-                        srcset="../img/top_sellers/choco_one@1x.jpg 1x, ../img/top_sellers/choco_one@2x.jpg 2x">
+                        srcset="/img/top_sellers/choco_one@1x.jpg 1x, /img/top_sellers/choco_one@2x.jpg 2x">
                     <!-- Tablet -->
                     <source media="(min-width: 768px)"
-                        srcset="../img/top_sellers/choco-one-tablet@1x.jpg 1x, ../img/top_sellers/choco-one-tablet@2x.jpg 2x">
+                        srcset="/img/top_sellers/choco-one-tablet@1x.jpg 1x, /img/top_sellers/choco-one-tablet@2x.jpg 2x">
                     <!-- Mobile -->
                     <source media="(max-width: 767px)"
-                        srcset="../img/top_sellers/choco-one-mobile@1x.jpg 1x, ../img/top_sellers/choco-one-mobile@2x.jpg 2x">
+                        srcset="/img/top_sellers/choco-one-mobile@1x.jpg 1x, /img/top_sellers/choco-one-mobile@2x.jpg 2x">
                     <img class="top-icon" src="../img/top_sellers/choco-one-mobile@1x.jpg"
                         alt="Dark chocolate with hazelnuts">
                 </picture>
@@ -24,27 +24,26 @@
                 <picture>
                     <!-- Desktop -->
                     <source media="(min-width: 1200px)"
-                        srcset="../img/top_sellers/choco_two@1x.jpg 1x, ../img/top_sellers/choco_two@2x.jpg 2x">
+                        srcset="/img/top_sellers/choco_two@1x.jpg 1x, /img/top_sellers/choco_two@2x.jpg 2x">
                     <!-- Tablet -->
                     <source media="(min-width: 768px)"
-                        srcset="../img/top_sellers/choco-two-tablet@1x.jpg 1x, ../img/top_sellers/choco-two-tablet@2x.jpg 2x">
+                        srcset="/img/top_sellers/choco-two-tablet@1x.jpg 1x, /img/top_sellers/choco-two-tablet@2x.jpg 2x">
                     <!-- Mobile -->
                     <source media="(max-width: 767px)"
-                        srcset="../img/top_sellers/choco-two-mobile@1x.jpg 1x, ../img/top_sellers/choco-two-mobile@2x.jpg 2x">
-                    <img class="top-icon" src="../img/top_sellers/choco-two-mobile@1x.jpg"
-                        alt="Milk chocolate with nuts">
+                        srcset="/img/top_sellers/choco-two-mobile@1x.jpg 1x, /img/top_sellers/choco-two-mobile@2x.jpg 2x">
+                    <img class="top-icon" src="/img/top_sellers/choco-two-mobile@1x.jpg" alt="Milk chocolate with nuts">
                 </picture>
             </li>
             <li class="top-item top-card">
                 <!-- Desktop -->
                 <img class="top-icon"
                     srcset="/img/top_sellers/choco_three@1x.jpg 1x, /img/top_sellers/choco_three@2x.jpg 2x"
-                    src="../img/top_sellers/choco_three@1x.jpg" alt="Chocolate tower">
+                    src="/img/top_sellers/choco_three@1x.jpg" alt="Chocolate tower">
             </li>
         </ul>
-             <p class="top-paragraph-desk">Crazy enough chocolate originates from a bean just like the coffee bean called
-                        Cacao. Cacao has been around for
-                        thousands of years and was first discovered by the Native American tribe called the Mayans.</p>
-                     <button type="submit" class="top-button section-btn js-open-modal">Buy now</button>
+        <p class="top-paragraph-desk">Crazy enough chocolate originates from a bean just like the coffee bean called
+            Cacao. Cacao has been around for
+            thousands of years and was first discovered by the Native American tribe called the Mayans.</p>
+        <button type="submit" class="top-button section-btn js-open-modal">Buy now</button>
     </div>
 </section>
