--- a/src/css/explore-chocolate.css
+++ b/src/css/explore-chocolate.css
@@ -127,14 +127,14 @@ stroke: var(--main-light-text-color);
 filter: drop-shadow(0px 5.44492px 5.44492px rgba(0, 0, 0, 0.03));
 border-radius: 25px;
 transition: transform var(--transition-dur-and-func) border-color var(--transition-dur-and-func);
-top: 24px;
+top: 0;
 }
 @media only screen and (min-width: 767px) {
   .explore-input {
     width: 313px;
     height: 52px;
     padding: 14px 24px;;
-     top: 28px;
+     
   }
 }
 .explore-input:focus {
@@ -150,8 +150,8 @@ height: 45px;
 justify-content: center;
 align-items: center;
 padding: 14px 22px;
-right: 23px;
-bottom: 39px;
+right: 25px;
+bottom: 33px;
 transition: background-color var(--transition-dur-and-func), color var(--transition-dur-and-func);
 }
 .explore-modal-button:hover,
@@ -166,7 +166,7 @@ color: var(--primary-accent-color);
     height: 52px;
     padding: 17px 32px;
     right: 40px;
-    bottom: 55px;
+    bottom: 41px;
   }
 }
 @media only screen and (min-width: 768px) {
